methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value avancer
      effacer();avancer()
                ^