methods.slug.SlugHunting.scala.code
def hunt() {
    if (isFacingTrail) {
      effacer();avancer()
    }
}

def isFacingTrail():Boolean = {
  var cases : Boolean = false
  if (!estFaceMur()) {
    avance()
    if (getCouleurSol() == Color.green) {
      cases=true
    }
  recule()
  } 
  return cases
}

def effacer() {
  baisseBrosse();leveBrosse()
}